react router and link to pages

--- a/package.json
+++ b/package.json
@@ -2,19 +2,20 @@
   "name": "selina_test",
   "version": "0.1.0",
   "private": false,
-  "homepage": "https://mjayalam.github.io/gift_angie",
+  "homepage": "https://mjayalam.github.io/selina_test",
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
-    "gh-pages": "^3.2.3",
     "@testing-library/user-event": "^13.5.0",
     "bootstrap": "^5.2.3",
     "eslint": "^8.39.0",
+    "gh-pages": "^3.2.3",
     "primeicons": "^6.0.1",
     "primereact": "^9.3.0",
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.4",
     "react-dom": "^18.2.0",
+    "react-router-dom": "^6.10.0",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
   },
